# aur-packages

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Makefile.toml  packager.py  readme.md
.github/workflows/: commit-workflow.yaml  weekly.yaml
.travis/: build_docker.sh  build_image.sh  delete_old.py  test_package.sh  test_package_internal.sh
.travis/aur-ci-img/: Dockerfile
image/: Dockerfile  rankmirrors  test.sh
packager/: .gitignore  Cargo.toml
packager-lib/: Cargo.toml
packager-lib/src/: lib.rs  manager.rs  package.rs
packager/src/: lib.rs  main.rs  package.rs  package_manager.rs
scripts/: get_package_version.sh  packages.py  settings.py  shellcheck_stub.sh  srcinfo.py
src/: Cargo.toml
src/src/: aur.rs  lib.rs  package.rs  package_manager.rs
tester/: Cargo.toml
tester/src/: main.rs
