[package]
name = "packager-lib"
version = "0.1.0"
authors = ["camas <camas@users.noreply.github.com>"]
edition = "2018"

[dependencies]
serde = { version = "*", features = ["derive"] } # Serialization
serde_yaml = "*" # YAML Serialization
reqwest = { version = "*", features = ["blocking", "json"] } # HTTP requests
