[package]
name = "packager"
version = "0.1.0"
authors = ["Camas <camas@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33.0"
log = "^0.4.8"
stderrlog = "^0.4.3"
serde = { version = "^1.0.104", features = ["derive"] }
serde_yaml = "^0.8.11"
ansi_term = "^0.12.1"
